commit de entrega

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "cSpell.words": [
         "autocompletar",
         "autocompletara",
-        "dragridview"
+        "dragridview",
+        "Encapsulamiento",
+        "logeado"
     ]
 }
